# picture-metadata-renamer

./: .gitignore  pyproject.toml  rename_files_from_metadata.py
